<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_radiusbackground"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/hostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addDialogHostName"
            android:inputType="text" />

        <EditText
            android:id="@+id/hostIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hostName"
            android:hint="@string/addDialogHostIP"
            android:inputType="text" />

        <EditText
            android:id="@+id/hostMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hostIp"
            android:hint="@string/addDialogHostMac"
            android:inputType="text" />

        <EditText
            android:id="@+id/device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hostMac"
            android:hint="@string/addDialogDevice"
            android:inputType="text"
            android:text="@string/addDialogManual" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/device"
            android:hint="@string/addDialogPort"
            android:inputType="text"
            android:text="@string/addDialogDefaultPort" />

        <Button
            android:id="@+id/addDialogSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/port"
            android:text="@string/addDialogSave" />
    </RelativeLayout>
</RelativeLayout>