<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_scanner"
        android:enabled="true"
        android:icon="@mipmap/ic_polymer_black_48dp"
        android:title="@string/menu_item_scanner"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_config"
        android:enabled="true"
        android:icon="@mipmap/ic_sd_storage_black_48dp"
        android:title="@string/menu_item_config"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_settings"
        android:enabled="true"
        android:icon="@mipmap/ic_settings_black_48dp"
        android:title="@string/menu_item_settings"
        app:showAsAction="ifRoom" />
</menu>