<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_frame_scanner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_shadowbackground"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="1dp"
            android:src="@mipmap/ic_wifi_black_48dp" />

        <TextView
            android:id="@+id/networkInformat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/icon"
            android:layout_marginStart="17dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/networkInformation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wifiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/networkInformat"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/unInitialize"
            android:textColor="#656565"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wifiMacAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifiName"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/unInitialize"
            android:textColor="#656565"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/localMacAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifiMacAddress"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/unInitialize"
            android:textColor="#656565"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/localIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/localMacAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:text="@string/unInitialize"
            android:textColor="#656565"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/newScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:enabled="false"
        android:text="@string/newScan" />

    <ProgressBar
        android:id="@+id/scanProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="100"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/frame_scanner_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent" />
</LinearLayout>